--- a/ss9/server-time/build.gradle
+++ b/ss9/server-time/build.gradle
@@ -15,6 +15,7 @@ dependencies {
     testImplementation 'junit:junit:4.11'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+    implementation group: 'jstl', name: 'jstl', version: '1.2'
 }
 
 test {
